--- a/playbook.yml
+++ b/playbook.yml
@@ -2,10 +2,14 @@
 - hosts: all
   become: true
   tasks:
+    - debug:
+        msg: "Yeah!"
+
     - name: Update APT cache
       apt:
         update_cache: yes
         cache_valid_time: 3600      
+    
     - name: Install libraries
       apt:
         name: "{{ item }}"        
@@ -16,14 +20,21 @@
         - python3-pymysql
         - python-apt
         - python3-apt
+
     - name: Add databases
       mysql_db:
         name: "{{ item }}"
         login_unix_socket: /var/run/mysqld/mysqld.sock
       with_items:
         - first
-        - second    
-    - name: Install Nginx
+        - second  
+
+    - name: Install nginx
       apt:
-	name: nginx
-	force_apt_get: true
+        name: nginx
+
+    - name: Copy index.html
+      ansible.builtin.copy:
+        src: index.html
+        dest: /var/www/html
+
