--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,9 @@
 - hosts: all
   become: true
   tasks:
+	- name: "Ansible | Print a variable"
+		debug:
+			msg: "The operating system is {{ ansible_distribution }}"
     - debug:
         msg: "Yeah!"
 
